--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -243,7 +243,7 @@ body.admin-bar {
       padding-top: 46px; } }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-size: 16px;
   line-height: 1.7; }
 
@@ -266,7 +266,7 @@ a {
 
 h1, h2, h3, h4, h5 {
   line-height: 1.2;
-  font-family: "Open Sans", Helvetica, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   margin: 0; }
 
 blockquote {
@@ -1026,7 +1026,6 @@ hr.clear {
 .row.align-top {
   -webkit-box-align: start;
       -ms-flex-align: start;
-              -ms-grid-row-align: flex-start;
           align-items: flex-start; }
 
 .column.align-top {
@@ -1036,7 +1035,6 @@ hr.clear {
 .row.align-bottom {
   -webkit-box-align: end;
       -ms-flex-align: end;
-              -ms-grid-row-align: flex-end;
           align-items: flex-end; }
 
 .column.align-bottom {
@@ -1046,21 +1044,21 @@ hr.clear {
 .row.align-middle {
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center; }
 
 .column.align-middle {
   -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
       align-self: center; }
 
 .row.align-stretch {
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
-              -ms-grid-row-align: stretch;
           align-items: stretch; }
 
 .column.align-stretch {
   -ms-flex-item-align: stretch;
+      -ms-grid-row-align: stretch;
       align-self: stretch; }
 
 /*!
@@ -3288,15 +3286,6 @@ hr.clear {
   position: relative;
   z-index: 1; }
 
-.row.narrow {
-  max-width: 800px; }
-
-.site-header {
-  position: relative; }
-
-.site-branding {
-  display: inline-block; }
-
 /**
  * The standard section wrapper. Use this with other classes for the base styling.
  * Default paddings are 40 and 80px
@@ -3320,6 +3309,126 @@ hr.clear {
   .section-fullwidth.inverted {
     background: black;
     color: white; }
+
+.row.narrow {
+  max-width: 800px; }
+
+.site-header {
+  position: relative; }
+
+.site-branding {
+  display: inline-block; }
+
+.input {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  box-sizing: border-box;
+  width: 100%;
+  margin: 0 0 1rem;
+  padding: 0.66667rem;
+  background: #fff;
+  border: 1px solid #ddd;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05);
+  border-radius: 0;
+  outline: none;
+  resize: vertical;
+  -webkit-transition: border-color 0.3s ease;
+  transition: border-color 0.3s ease; }
+  .input[disabled] {
+    border-color: #eaeaea;
+    background-color: #f2f2f2;
+    box-shadow: none;
+    cursor: not-allowed; }
+  .input:focus {
+    border-color: #4072db; }
+
+.control {
+  margin: 0 0 1rem;
+  box-sizing: border-box; }
+  .control-input {
+    position: absolute;
+    opacity: 0;
+    pointer-events: none; }
+  .control-label {
+    display: block;
+    position: relative;
+    padding-left: calc(20px + 0.66667rem);
+    will-change: transform; }
+    .control-label::before, .control-label::after {
+      content: '';
+      position: absolute;
+      top: calc(50% - 10px);
+      left: 0;
+      width: 20px;
+      height: 20px;
+      border: 1px solid transparent; }
+    .control-label::before {
+      content: '';
+      position: absolute;
+      top: calc(50% - 10px);
+      left: 0;
+      width: 20px;
+      height: 20px;
+      border-color: #ddd;
+      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05);
+      background: #fff;
+      background-size: 0; }
+    .control-label::after {
+      background-size: 60%;
+      background-repeat: no-repeat;
+      background-position: center;
+      -webkit-transform: scale(0);
+              transform: scale(0);
+      -webkit-transition: -webkit-transform 0.3s ease;
+      transition: -webkit-transform 0.3s ease;
+      transition: transform 0.3s ease;
+      transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+      will-change: transform; }
+  .control-input[type='radio'] + .control-label::before {
+    border-radius: 100%; }
+  .control-input[type='radio'] + .control-label::after {
+    background-image: url("data:image/svg+xml,%3Csvg%20version%3D%221.1%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20xmlns%3Axlink%3D%22http%3A//www.w3.org/1999/xlink%22%20x%3D%220%22%20y%3D%220%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%20xml%3Aspace%3D%22preserve%22%3E%3Cpath%20fill%3D%22%234072db%22%20d%3D%22M256%2C464c114.9%2C0%2C208-93.1%2C208-208c0-114.9-93.1-208-208-208C141.1%2C48%2C48%2C141.1%2C48%2C256C48%2C370.9%2C141.1%2C464%2C256%2C464z%22/%3E%3C/svg%3E"); }
+  .control-input[type='checkbox'] + .control-label::after {
+    background-image: url("data:image/svg+xml,%3Csvg%20version%3D%221.1%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20xmlns%3Axlink%3D%22http%3A//www.w3.org/1999/xlink%22%20x%3D%220%22%20y%3D%220%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%20xml%3Aspace%3D%22preserve%22%3E%3Cpath%20fill%3D%22%234072db%22%20d%3D%22M461.6%2C109.6l-54.9-43.3c-1.7-1.4-3.8-2.4-6.2-2.4c-2.4%2C0-4.6%2C1-6.3%2C2.5L194.5%2C323c0%2C0-78.5-75.5-80.7-77.7c-2.2-2.2-5.1-5.9-9.5-5.9c-4.4%2C0-6.4%2C3.1-8.7%2C5.4c-1.7%2C1.8-29.7%2C31.2-43.5%2C45.8c-0.8%2C0.9-1.3%2C1.4-2%2C2.1c-1.2%2C1.7-2%2C3.6-2%2C5.7c0%2C2.2%2C0.8%2C4%2C2%2C5.7l2.8%2C2.6c0%2C0%2C139.3%2C133.8%2C141.6%2C136.1c2.3%2C2.3%2C5.1%2C5.2%2C9.2%2C5.2c4%2C0%2C7.3-4.3%2C9.2-6.2L462%2C121.8c1.2-1.7%2C2-3.6%2C2-5.8C464%2C113.5%2C463%2C111.4%2C461.6%2C109.6z%22/%3E%3C/svg%3E"); }
+  .control-input[type='radio'][disabled] + .control-label,
+  .control-input[type='checkbox'][disabled] + .control-label {
+    cursor: not-allowed; }
+  .control-input[type='radio'][disabled] + .control-label::before,
+  .control-input[type='checkbox'][disabled] + .control-label::before {
+    border-color: #eaeaea;
+    background-color: #f2f2f2;
+    box-shadow: none; }
+  .control-input:checked + .control-label::after {
+    -webkit-transform: scale(1);
+            transform: scale(1); }
+
+.select {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  box-sizing: border-box;
+  margin: 0 0 1rem;
+  padding: 0.66667rem;
+  width: 100%;
+  background: #fff;
+  background-image: url("data:image/svg+xml,%3Csvg%20version%3D%221.1%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20xmlns%3Axlink%3D%22http%3A//www.w3.org/1999/xlink%22%20x%3D%220%22%20y%3D%220%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%20xml%3Aspace%3D%22preserve%22%3E%3Cpath%20fill%3D%22%234072db%22%20d%3D%22M256%2C298.3L256%2C298.3L256%2C298.3l174.2-167.2c4.3-4.2%2C11.4-4.1%2C15.8%2C0.2l30.6%2C29.9c4.4%2C4.3%2C4.5%2C11.3%2C0.2%2C15.5L264.1%2C380.9c-2.2%2C2.2-5.2%2C3.2-8.1%2C3c-3%2C0.1-5.9-0.9-8.1-3L35.2%2C176.7c-4.3-4.2-4.2-11.2%2C0.2-15.5L66%2C131.3c4.4-4.3%2C11.5-4.4%2C15.8-0.2L256%2C298.3z%22/%3E%3C/svg%3E");
+  background-size: 12px;
+  background-repeat: no-repeat;
+  background-position: calc(100% - 0.66667rem) center;
+  border: 1px solid #ddd;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05);
+  border-radius: 0;
+  outline: 0; }
+  .select[disabled] {
+    border-color: #eaeaea;
+    background-color: #f2f2f2;
+    box-shadow: none;
+    cursor: not-allowed; }
+  .select:focus {
+    border-color: #4072db; }
+  .select::-ms-expand {
+    display: none; }
 
 /**
  * DX MOBILE MENU
