--- a/assets/sass/base/_settings.scss
+++ b/assets/sass/base/_settings.scss
@@ -28,6 +28,6 @@ $color-accent: $color-orange;		// Orange
 
 
 // Fonts
-$font-serif: Georgia, "Times New Roman", serif;
-$font-sans: "Open Sans", sans-serif;
-$font-heading: "Open Sans", Helvetica, sans-serif;
+$font-serif: "Palatino Linotype", "Book Antiqua", Palatino, Georgia, "Times New Roman", serif;
+$font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+$font-heading: $font-sans;
